# saead

./: .gitignore  Cargo.toml  README.md  build.rs  make.sh
Lib/: saeadLib.swift
saead.xcframework/: Info.plist
saead.xcframework/ios-arm64/saead.framework/Headers/: Export.h  saeadFFI.h
saead.xcframework/ios-arm64/saead.framework/Modules/: module.modulemap
saead.xcframework/ios-arm64_x86_64-simulator/saead.framework/: Info.plist
saead.xcframework/ios-arm64_x86_64-simulator/saead.framework/Headers/: saeadFFI.h
saeadApp/: ContentView.swift  encrypted  key.json  plain.txt  saeadAppApp.swift
saeadApp.xcodeproj/: project.pbxproj
saeadApp.xcodeproj/project.xcworkspace/xcuserdata/abai.xcuserdatad/: UserInterfaceState.xcuserstate
saeadApp.xcodeproj/xcuserdata/abai.xcuserdatad/xcschemes/: xcschememanagement.plist
saeadLib/: saeadLib.swift
src/: lib.rs  main.txt  saead.udl
